--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -37,6 +37,8 @@ $red: #d1495b;
 $gray: $gray-600;
 $dark: $gray-800;
 $light: $gray-200;
+$black: #000;
+$white: #fff;
 
 $color-palette: (
   primary: $orange,
@@ -46,22 +48,35 @@ $color-palette: (
   error: $red,
   dark: $dark,
   light: $light,
-  gray: $gray
+  gray: $gray,
+  black: $black,
+  white: $white,
 ) !default;
 
 /* ---------------------------------------------------------- 
     Typography
  ---------------------------------------------------------- */
+ 
+ $text-align: (
+   'left': left,
+   'center': center,
+   'right': right,
+   );
+   
 $text-base: 1rem;
 
+$text-xs: 11px; // $text-size-base * 0.688;
+$text-sm: 12px; // $text-size-base * 0.75;
+$text-md: 14px; // $text-size-base * 0.875;
+$text-lg: 16px; // $text-size-base * 1;
+$text-xl: 18px; // $text-size-base * 1.125;
+
 $text-sizes: (
-  'xs': $text-base * 0.75,
-  'sm': $text-base * 0.875,
-  'md': $text-base,
-  'lg': $text-base * 1.25,
-  'xl': $text-base * 1.5,
-  '2xl': $text-base * 1.75,
-  '3xl': $text-base * 2
+  'xs': $text-xs,
+  'sm': $text-sm,
+  'md': $text-md,
+  'lg': $text-lg,
+  'xl': $text-xl,
 ) !default;
 
 $headings: (
@@ -126,6 +141,12 @@ $rounded-sizes: (
 ) !default;
 
 /* ---------------------------------------------------------- 
+Spacing
+---------------------------------------------------------- */
+$spacing: 0.5rem !default;
+$space-count: 20 !default;
+
+/* ---------------------------------------------------------- 
     Buttons
  ---------------------------------------------------------- */
 $btn-size: 12px 16px !default;
@@ -140,8 +161,31 @@ $btn-sizes: (
   '-xl': $btn-size-xl,
 );
 
-/* ---------------------------------------------------------- 
-    Spacing
- ---------------------------------------------------------- */
-$spacing: 0.5rem !default;
-$space-count: 20 !default;
+// ----------------------------------------------------------
+//    Forms
+// ----------------------------------------------------------
+$form-bg-color: var(--gray-0);
+$form-bg-disabled-color: var(--gray-2);
+$form-border-color: var(--gray-3);
+$form-border-active-color: var(--primary);
+$form-border-disabled-color: var(--gray-3);
+$form-border-width: 1px;
+$form-padding: 1rem 1rem;
+$form-padding-sm: 0.5rem 0.75rem;
+
+// ----------------------------------------------------------
+// Toggle Switch
+// ----------------------------------------------------------
+$switch-bg-color-on: var(--primary);
+$switch-bg-color-off: var(--gray-3);
+$switch-shadow-on: -0.5px 0.5px 2px 0 var(--primary);
+$switch-shadow-off: 0.5px 0.5px 2px 0 var(--gray-4);
+$switch-control-color: white;
+$switch-width: 42px;
+$switch-height: 24px;
+$switch-gutter: 2px;
+$switch-radius: 50%;
+$switch-control-speed: 0.1s;
+$switch-control-ease: ease-in;
+$switch-radius: calc($switch-height / 2);
+$switch-control-size: $switch-height - ($switch-gutter * 2);
