--- a/src/assets/styles/component/_colors.scss
+++ b/src/assets/styles/component/_colors.scss
@@ -1,7 +1,10 @@
 :root {
-    @each $name, $value in $color-palette{
-        --#{''+$name}: #{$value};      
-    }
+  @each $name, $value in $color-palette {
+    --#{''+$name}: #{$value};
+  }
+  @each $name, $value in $grays {
+    --#{''+$name}: #{$value};
+  }
 }
 
 // Color Invert
@@ -12,9 +15,11 @@
 
   $yiq: (($r * 299) + ($g * 587) + ($b * 114)) * 0.001;
 
-  @if ($yiq >= 128) {
+  @if ($yiq >=128) {
     color: black;
-  } @else {
+  }
+
+  @else {
     color: white;
   }
 }
@@ -26,10 +31,10 @@ $color-property: (
   border: border-color
 );
 
-
-
 @each $name, $value in $color-palette {
-  @each $selector, $property in $color-property {
+
+  @each $selector,
+  $property in $color-property {
     .#{$selector}-#{'' + $name} {
       // #{$property}: $value !important;
       #{$property}: var(--#{$name}) !important;
@@ -43,7 +48,9 @@ $color-property: (
 
 
 @each $name, $value in $grays {
-  @each $selector, $property in $color-property {
+
+  @each $selector,
+  $property in $color-property {
     .#{$selector}-#{'' + $name} {
       // #{$property}: $value !important;
       #{$property}: var(--#{$name}) !important;
