--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -9,24 +9,24 @@
 }
 
 @font-face {
-	font-family: 'Pretendard';
-	font-weight: 700;
-	font-display: swap;
-	src: local('Pretendard Bold'), url('@/assets/fonts/woff2/Pretendard-Bold.woff2') format('woff2'), url('@/assets/fonts/woff/Pretendard-Bold.woff') format('woff');
+  font-family: 'Pretendard';
+  font-weight: 700;
+  font-display: swap;
+  src: local('Pretendard Bold'), url('@/assets/fonts/woff2/Pretendard-Bold.woff2') format('woff2'), url('@/assets/fonts/woff/Pretendard-Bold.woff') format('woff');
 }
 
 @font-face {
-	font-family: 'Pretendard';
-	font-weight: 600;
-	font-display: swap;
-	src: local('Pretendard SemiBold'), url('@/assets/fonts/woff2/Pretendard-SemiBold.woff2') format('woff2'), url('@/assets/fonts/woff/Pretendard-SemiBold.woff') format('woff');
+  font-family: 'Pretendard';
+  font-weight: 600;
+  font-display: swap;
+  src: local('Pretendard SemiBold'), url('@/assets/fonts/woff2/Pretendard-SemiBold.woff2') format('woff2'), url('@/assets/fonts/woff/Pretendard-SemiBold.woff') format('woff');
 }
 
 @font-face {
-	font-family: 'Pretendard';
-	font-weight: 500;
-	font-display: swap;
-	src: local('Pretendard Medium'), url('@/assets/fonts/woff2/Pretendard-Medium.woff2') format('woff2'), url('@/assets/fonts/woff/Pretendard-Medium.woff') format('woff');
+  font-family: 'Pretendard';
+  font-weight: 500;
+  font-display: swap;
+  src: local('Pretendard Medium'), url('@/assets/fonts/woff2/Pretendard-Medium.woff2') format('woff2'), url('@/assets/fonts/woff/Pretendard-Medium.woff') format('woff');
 }
 
 
@@ -36,7 +36,7 @@ body {
   padding: 0;
   font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, system-ui,
     Roboto, 'Helvetica Neue', 'Segoe UI';
-    font-size: 14px;
+  font-size: 14px;
   font-weight: 500;
   line-height: normal;
   -webkit-font-smoothing: antialiased;
@@ -54,13 +54,22 @@ dd {
 a {
   text-decoration: none;
   color: $black;
-  &:is(:hover,:focus,:visited, :active) {
+
+  &:is(:hover, :focus, :visited, :active) {
     color: inherit;
   }
 }
 
 p {
   line-height: 1.4;
-  margin:0;
-  padding:0;
+  margin: 0;
+  padding: 0;
+}
+
+hr,
+.hr {
+  background-color: var(--gray-5);
+  height: 1px;
+  border: 0;
+  margin: 2rem 0;
 }
