--- a/src/assets/styles/component/_forms.scss
+++ b/src/assets/styles/component/_forms.scss
@@ -1,22 +1,22 @@
 // forms
 
-@mixin form-input($rounded) {
+@mixin form-input($rounded,$padding) {
   position: relative;
   box-sizing: border-box;
   background-color: $form-bg-color;
   border: $form-border-width solid $form-border-color;
   border-radius: $rounded;
-  // height: $height;
+  height: $input-height;
   transition: 0.2s;
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin: 0;
-  padding: 0;
   font-size: $text-md;
+  padding: $padding;
 }
 
-@mixin form-elements($padding) {
+@mixin form-elements {
 
   input:not([type='checkbox']):not([type='radio']),
   select,
@@ -31,7 +31,6 @@
     font-size: inherit;
     color: inherit;
     width: 100%;
-    padding: $padding;
     margin: 0;
     user-select: inherit;
     white-space: pre-wrap;
@@ -66,10 +65,10 @@
 
   select {
     background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjQiIGhlaWdodD0iMjQiIHZpZXdCb3g9IjAgMCAyNCAyNCIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KPHBhdGggZD0iTTYgOUwxMiAxNUwxOCA5IiBzdHJva2U9IiMxNjE2MTYiIHN0cm9rZS13aWR0aD0iMS41IiBzdHJva2UtbGluZWNhcD0icm91bmQiIHN0cm9rZS1saW5lam9pbj0icm91bmQiLz4KPC9zdmc+Cg==);
-    background-position: right 11px center;
+    background-position: right center;
     background-repeat: no-repeat;
     background-size: 24px;
-    padding-right: 1rem;
+    padding-right: 0.5rem;
   }
 
 
@@ -123,8 +122,8 @@
 /* ================================= form-input ================================= */
 
 .form-input {
-  @include form-input($rounded);
-  @include form-elements($form-padding);
+  @include form-input($rounded,$form-padding);
+  @include form-elements;
   @include form-pseudo;
   font-size: $text-md;
 
@@ -137,10 +136,14 @@
     margin: 0;
     padding: $padding;
 
+  }
+  
+  &.prefix,
+  &.suffix {
     .icon {
       width: 24px;
       height: 24px;
-
+  
       svg {
         width: 100%;
         height: 100%;
@@ -148,12 +151,8 @@
     }
   }
 
-  &.prefix {
-    @include prefix(0 6px 0 12px)
-  }
-
-  &.suffix {
-    @include prefix(0 8px 0 12px)
+  .unit {
+    // padding: 0 12px 0 0;
   }
 
   // &[readonly='readonly'] {
