--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -128,17 +128,17 @@ $font-weight: (
 $grid-breakpoints: (
   xs: 0,
   sm: 576px,
-  md: 768px,
+  // md: 768px,
   lg: 1200px,
-  xl: 1400px
+  // xl: 1400px
 ) !default;
 
 // Cotainer
 $container-max-widths: (
   sm: 575px,
-  md: 767px,
+  // md: 767px,
   lg: 1199px,
-  xl: 1399px
+  // xl: 1399px
 ) !default;
 
 $grid-count: 12 !default;
