--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -42,6 +42,7 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+ol,
 ul,
 li,
 dt,
@@ -72,6 +73,11 @@ hr,
   height: 1px;
   border: 0;
   margin: 2rem 0;
+}
+img {
+  object-fit: cover;
+  width: 100%;
+  height: auto;
 }
 
 
