--- a/src/assets/styles/component/_container.scss
+++ b/src/assets/styles/component/_container.scss
@@ -1,21 +1,10 @@
 // fluid
 @mixin make-container($gutter: $grid-gutter) {
-  // --gutter-x: #{$gutter};
-  // --gutter-y: 0;
-  --gutter-x: 10px;
+  --gutter-x: #{$gutter};
   width: 100%;
-  min-width: 1240px;
-  max-width: 1420px;
   margin: auto;
-  
-  padding-right: var(--gutter-x);
-  padding-left: var(--gutter-x);
-  margin-right: auto;
-  margin-left: auto;
-
-  @media (max-width: 1280px) {
-    --gutter-x: 20px;
-  }
+  padding-right: calc(var(--gutter-x) / 2);
+  padding-left: calc(var(--gutter-x) / 2);
 }
 
 .container,
@@ -23,10 +12,10 @@
   @include make-container();
 }
 
-// .container {
-//   @each $breakpoint, $width in $container-max-widths {
-//     @include breakepoint-up(#{$breakpoint}) {
-//       max-width: $width;
-//     }
-//   }
-// }
+.container {
+  @each $breakpoint, $width in $container-max-widths {
+    @include breakepoint-up(#{$breakpoint}) {
+      max-width: $width;
+    }
+  }
+}
