Testing... toggle event

--- a/src/assets/styles/component/_reset.scss
+++ b/src/assets/styles/component/_reset.scss
@@ -20,10 +20,17 @@ section {
   margin:0;
   padding:0;
 }
+
 ol,
-ul {
+ul,
+li,
+dt,
+dd {
+  padding: 0;
+  margin: 0;
   list-style: none;
 }
+
 blockquote,
 q {
   quotes: none;
