--- a/src/components/TabNav/TabNav.scss
+++ b/src/components/TabNav/TabNav.scss
@@ -1,19 +1,29 @@
 // tabNav
 .tab-nav {
+  z-index: 10;
   position: fixed;
   bottom:0;
   left: 0;
   right: 0;
+  background-color: var(--white);
   box-shadow: 0px -1px 8px rgba(0, 0, 0, 0.1);
   border-radius: 12px 12px 0px 0px;
   height: 66px;
+
   padding: 8px 0;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   
-  &--item a {
-    width: 28px;
+  &--item {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  &--item :is(a, button) {
+    width: 100%;
     display: grid;
+    place-items: center;
     row-gap: 8px;
 
     .icon {
