--- a/src/components/TabNav/TabNav.scss
+++ b/src/components/TabNav/TabNav.scss
@@ -8,7 +8,7 @@
   background-color: var(--white);
   box-shadow: 0px -1px 8px rgba(0, 0, 0, 0.1);
   border-radius: 12px 12px 0px 0px;
-  height: 66px;
+  // height: 66px;
 
   padding: 8px 0;
   display: flex;
