--- a/src/components/Appbar/Appbar.scss
+++ b/src/components/Appbar/Appbar.scss
@@ -17,6 +17,13 @@
     align-items: center;
     height: 50px;
   }
+  .title {
+    font-size: $text-xl;
+    font-weight: 600;
+    color: var(--black);
+    width: 100%;
+    text-align: center;
+  }
 }
 
 // left
@@ -27,6 +34,7 @@
   gap: 6px;
   font-size: $text-lg;
   font-weight: 600;
+  padding-left: 22px;
 
   &::after {
     content: '';
@@ -53,6 +61,7 @@
 }
 
 .actions {
+  flex-shrink: 0;
   display: flex;
   height: 100%;
 
@@ -62,13 +71,17 @@
     padding: 0 8px;
   }
 
-  .btn:last-child {
-    padding-right: 22px;
+  &.start {
+    .btn:first-child {
+      padding-left: 22px;
+    }
+  }
+  &.end {
+    .btn:last-child {
+      padding-right: 22px;
+    }
   }
 
-  &.start {
-    padding-left: 22px;
-  }
 }
 
 .noti {
