--- a/src/assets/styles/_components.scss
+++ b/src/assets/styles/_components.scss
@@ -8,5 +8,6 @@
 @import 'component/grid';
 @import 'component/spacing';
 @import 'component/sizes';
+@import 'component/borders';
 @import 'component/buttons';
 @import 'component/forms';
