--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -42,7 +42,8 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-.guide, .guide * {
+.guide,
+.guide * {
   background-color: rgb(#f00, 0.15);
 }
 
@@ -69,8 +70,20 @@ hr,
   border: 0;
   margin: 2rem 0;
 }
+
 img {
-  object-fit:fill;
+  object-fit: fill;
+}
+
+.sr-only {
+  position: absolute;
+  overflow: hidden;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  border: 0;
+  clip: rect(0, 0, 0, 0);
 }
 
 
@@ -91,6 +104,7 @@ img {
 .fade-leave-active {
   transition: all 0.3s ease-in-out;
 }
+
 .fade-enter,
 .fade-leave-to {
   opacity: 0
