--- a/src/components/TabNav/TabNav.scss
+++ b/src/components/TabNav/TabNav.scss
@@ -31,6 +31,9 @@
       place-items: center;
       width: 28px;
       height: 28px;
+      background-size: cover;
+      background-position: 50% 50%;
+      background-repeat: no-repeat;
     }
     .name {
       display: block;
