tabNav => activeTab 구성2

--- a/src/components/TabNav/TabNav.scss
+++ b/src/components/TabNav/TabNav.scss
@@ -1,5 +1,8 @@
+
 // tabNav
 .tab-nav {
+  --tabnav-h: 57px;
+
   z-index: 10;
   position: fixed;
   bottom:0;
@@ -8,11 +11,10 @@
   background-color: var(--white);
   box-shadow: 0px -1px 8px rgba(0, 0, 0, 0.1);
   border-radius: 12px 12px 0px 0px;
-  // height: 66px;
-
-  padding: 8px 0;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  height: var(--tabnav-h);
   
   &--item {
     width: 100%;
