--- a/src/components/Toast/Toast.scss
+++ b/src/components/Toast/Toast.scss
@@ -3,7 +3,7 @@
   position: fixed;
   left: 20px;
   right: 20px;
-  bottom: 20px;
+  bottom: calc(var(--tabnav-h) + 20px);
   // transform: translateX(-50%);
   display: flex;
   flex-direction: column;
