--- a/src/components/Appbar/Appbar.scss
+++ b/src/components/Appbar/Appbar.scss
@@ -113,8 +113,8 @@
   right: 0;
   width: 100%;
   height: 100%;
-  background-color: var(--primary-2);
-  color: var(--white);
+  background-color: var(--white);
+  color: var(--black);
 }
 
 .menu-enter-active,
