--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,5 +1,229 @@
 // Sidebar
-.sidebar {
-  background-color: var(--white);
-  
+.sr_only {
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
+  width: 1px;
+  height: 1px;
+  font-size: 1px;
+  clip: rect(1px, 1px, 1px, 1px);
+}
+
+.btns-wrap {
+  display: flex;
+  position: fixed;
+  align-items: center;
+  justify-content: flex-end;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  padding: 0 22px;
+  z-index: 30;
+  button ~ button {
+    margin-left: 14px;
+  }
+  .btn-settings {
+    width: 24px;
+    height: 24px;
+    background: url('@/assets/images/icon_20/Gear.png') center no-repeat;
+    background-size: 100%;
+  }
+  .btn-close {
+    width: 24px;
+    height: 24px;
+    background: url('@/assets/images/icon_24/appbar_close.png') center no-repeat;
+    background-size: 100%;
+  }
+}
+
+.user-info {
+  padding: 0 22px;
+  z-index: 10;
+  position: sticky;
+  top: 0;
+  width: 100%;
+
+  .quick-wrap,
+  .info-wrap .info-area .sub {
+    display: none;
+  }
+
+  &.active {
+    margin-top: 50px;
+    .search-wrap {
+      margin-top: 26px;
+    }
+    .quick-wrap {
+      display: block;
+    }
+    .info-wrap .info-area .sub {
+      display: flex;
+    }
+    .info-wrap {
+      .ico-profile {
+        > img {
+          width: 48px;
+          height: 48px;
+        }
+      }
+      .info-area {
+        width: calc(100% - 60px);
+        .username {
+          font-size: 20px;
+          font-weight: 700;
+        }
+      }
+    }
+  }
+}
+
+.info-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 11px;
+  .ico-profile {
+    display: flex;
+    align-items: center;
+    > img {
+      width: 28px;
+      height: 28px;
+      transition: .3s;
+    }
+  }
+  .info-area {
+    width: calc(100% - 33px);
+    .username {
+      font-size: 16px;
+      font-weight: 600;
+      transition: .3s;
+    }
+    .sub {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      .recent {
+        margin-top: 2px;
+        > p {
+          color: var(--gray-4);
+          font-size: 13px;
+          > span {
+            color: var(--gray-2);
+          }
+        }
+      }
+      > button {
+        padding: 4px 8px;
+        background-color: var(--gray-6);
+        border: none;
+        border-radius: 4px;
+        color: var(--gray-2);
+        font-size: 11px;
+      }
+    }
+  }
+}
+
+.search-wrap {
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
+  width: 100%;
+  height: 46px;
+  margin-top: 16px;
+  border: 1px solid var(--gray-5);
+  border-radius: 8px;
+}
+
+.quick-wrap {
+  padding: 0 16px;
+  margin-top: 20px;
+    > ul {
+    display: flex;
+    justify-content: space-between;
+    > li {
+      > a {
+        > p {
+          color: var(--gray-1);
+          font-size: 13px;
+        }
+      }
+    }
+  }
+}
+
+.menulist {
+  position: relative;
+  margin-top: 30px;
+  > li {
+    width: 132px;
+    height: 50px;
+    padding: 14px 22px;
+    border-radius: 0 6px 6px 0;
+    font-size: $text-lg;
+    font-weight: 700;
+    transition: .3s;
+    .submenu {
+      display: none;
+      position: relative;
+      width: calc(100% - 184px);
+    }
+    &.active {
+      background-color: var(--primary-1);
+      color: var(--white);
+      .submenu {
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 22px;
+        color: var(--gray-4);
+        font-size: 12px;
+        font-weight: 500;
+        > li {
+          position: relative;
+          margin-top: 16px;
+          color: var(--gray-1);
+          font-size: 15px;
+          font-weight: 600;
+          &.dropdown {
+            &::after {
+              content: '';
+              position: absolute;
+              top: 0;
+              right: 0;
+              width: 18px;
+              height: 18px;
+              background: url('@/assets/images/icon_18/arrow.png') center no-repeat;
+              background-size: 100%;
+              transform: rotate(180deg);
+              transition: .3s;
+            }
+
+            &.expand {
+              &::after {
+                transform: rotate(0deg);
+              }
+            }
+          }
+          .dep3menu {
+            display: none;
+            > li {
+              margin-top: 16px;
+              margin-left: 10px;
+              color: var(--gray-2);
+              font-size: 14px;
+              font-weight: 500;
+            }
+          }
+
+          &.expand {
+            .dep3menu {
+              display: block;
+            }
+          }
+        }
+      }
+    }
+  }
 }
