--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -57,6 +57,11 @@ a {
   }
 }
 
+button {
+  font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, system-ui,
+  Roboto, 'Helvetica Neue', 'Segoe UI';
+}
+
 p {
   line-height: 1.4;
   margin: 0;
