--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -123,7 +123,12 @@
     justify-content: space-between;
     > li {
       > a {
+        display: flex;
+        flex-flow: column;
+        align-items: center;
+        justify-content: center;
         > p {
+          margin-top: 5px;
           color: var(--gray-1);
           font-size: 13px;
         }
