router, global css, setting...

--- a/src/assets/styles/_mixins.scss
+++ b/src/assets/styles/_mixins.scss
@@ -52,10 +52,14 @@
   white-space: nowrap;
 }
 
+// text-ellipsis ( 2 lines )
+
 //  margin-auto
 @mixin margin-auto {
   margin-left: auto;
   margin-right: auto;
 }
+
+// backdrop
 
 
