--- a/src/assets/styles/component/_container.scss
+++ b/src/assets/styles/component/_container.scss
@@ -12,10 +12,10 @@
   @include make-container();
 }
 
-.container {
-  @each $breakpoint, $width in $container-max-widths {
-    @include breakepoint-up(#{$breakpoint}) {
-      max-width: $width;
-    }
-  }
-}
+// .container {
+//   @each $breakpoint, $width in $container-max-widths {
+//     @include breakepoint-up(#{$breakpoint}) {
+//       max-width: $width;
+//     }
+//   }
+// }
